--- a/dandelionpy/dandelion/dandelion.conf
+++ b/dandelionpy/dandelion/dandelion.conf
@@ -5,6 +5,7 @@ server_time = 0
 
 [server]
 mdns_group = 239.255.255.250
+description = DandelionMessagingSystem
 local_port = 1337
 service_name = dandelion_service
 local_address = 127.0.0.1
